io-takamaka-examples/src/main/java/io/takamaka/tests/errors/illegalcalltofromcontract2/Caller.java
package io.takamaka.tests.errors.illegalcalltofromcontract2;

public class Caller {

	public void m() {
		new C().entry(); // KO
	}
}